# mpi-sws-semantics

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  STRUCTURE.md  _CoqProject  semantics.opam  synchronize.sh
theories/axiomatic/: fupd.v  hoare.v  hoare_lib.v  invariant_lib.v  ipm.v  later_loeb.v  ra_lib.v  resource_algebras.v
theories/axiomatic/concurrent_logrel/: adequacy.v  logrel.v  syntactic.v
theories/axiomatic/heap_lang/: adequacy.v  derived_laws.v  primitive_laws.v  primitive_laws_nolater.v  proofmode.v
theories/axiomatic/logrel/: adequacy.v  ghost_state.v  ghost_state_lib.v  logrel.v  persistent_pred.v  syntactic.v
theories/axiomatic/program_logic/: adequacy.v  ectx_lifting.v  lifting.v  sequential_wp.v
theories/axiomatic/reloc/: adequacy.v  contextual_refinement.v  fundamental.v  ghost_state.v  logrel.v  proofmode.v  src_rules.v  syntactic.v
theories/lib/: debruijn.v  facts.v  maps.v  sets.v
theories/program_logics/: concurrency.v  fupd.v  hoare.v  hoare_lib.v  invariant_lib.v  ipm.v  later_loeb.v  ra_lib.v  resource_algebras.v
theories/program_logics/concurrent_logrel/: adequacy.v  logrel.v  syntactic.v
theories/program_logics/heap_lang/: adequacy.v  derived_laws.v  primitive_laws.v  primitive_laws_nolater.v  proofmode.v
theories/program_logics/logrel/: adequacy.v  ghost_state.v  ghost_state_lib.v  logrel.v  notation.v  (+1 more)
theories/stlc/: cbn_logrel.v  exercises01.v  exercises02.v  logrel.v  notation.v  parallel_subst.v  types.v  untyped.v
theories/stlc_extended/: bigstep.v  lang.v  logrel.v  notation.v  parallel_subst.v  types.v
theories/systemf/: bigstep.v  binary_logrel.v  church_encodings.v  exercises03.v  exercises04.v  exercises05.v  existential_invariants.v  free_theorems.v  lang.v  logrel.v  notation.v  parallel_subst.v  tactics.v  types.v
theories/systemf_mu/: exercises06.v  logrel.v  notation.v  parallel_subst.v  pure.v  tactics.v  types.v  untyped_encoding.v  z_combinator.v
theories/systemf_mu_state/: execution.v  exercises07.v  lang.v  locations.v  logrel.v  mutbit.v  notation.v  parallel_subst.v  tactics.v  types.v
theories/warmup/: sheet0.v
(+63 files in other folders)
