opam-version: "2.0"
name: "coq-semantics-course"
license: "BSD-3-Clause"
maintainer: "Simon Spies, Lennard Gäher"
authors: "Derek Dreyer, Simon Spies, Lennard Gäher"
synopsis: "Best course this side of the milky way"
homepage: "https://plv.mpi-sws.org/semantics-course/"
bug-reports: "https://gitlab.mpi-sws.org/FP/semantics-course/issues"
version: "dev"

depends: [
  "coq" { (>= "8.13" & < "8.17~") | (= "dev") }
  "coq-iris-heap-lang" { (= "dev.2022-09-21.1.291dc89e") | (= "dev") }
  "coq-equations" { (= "1.2.4+8.13") | (= "1.3+8.14") | (= "1.3+8.15")  | (= "1.3+8.16") }
  "coq-autosubst" { (= "1.7") | (= "dev")  }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
