opam-version: "2.0"
name: "coq-semantics-course"
license: "BSD-3-Clause"
maintainer: "Simon Spies, Lennard Gäher"
authors: "Derek Dreyer, Simon Spies, Lennard Gäher"
synopsis: "Best course this side of the milky way"
homepage: "https://plv.mpi-sws.org/semantics-course/"
bug-reports: "https://gitlab.mpi-sws.org/FP/semantics-course/issues"
version: "dev"

depends: [
  "coq" { (>= "8.18" & < "8.19~") | (= "dev") }
  "coq-iris-heap-lang" { (= "dev.2023-10-03.0.70b30af7") | (= "dev") }
  "coq-equations" { (= "1.3+8.18") }
  "coq-autosubst" { (= "1.8") | (= "dev")  }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
